tests/snapshots/corpus__sexpr@022.kdl.snap
---
source: tests/corpus.rs
expression: "node \"this is an \\invalid escape\"\n"
---
(document
  (node
    (name node)
    (trivia " ")
    (argument
      (error "invalid escape sequence")
      (trivia "\"this is an \\invalid escape\"")
      (value "<error>"))
    (trivia "\n")))
