tests/snapshots/corpus__sexpr@error_escaped_content.kdl.snap
---
source: tests/corpus.rs
expression: "node \\ \"value\"\n"
---
(document
  (node
    (name node)
    (trivia " " "\\" " " "\"value\"")
    (error "line continuation was not followed by a newline")
    (trivia "\n")))
