tests/snapshots/corpus__sexpr@error_escaped_eof.kdl.snap
---
source: tests/corpus.rs
expression: "node \\ // no newline at end of file"
---
(document
  (node
    (name node)
    (trivia " " "\\" " // no newline at end of file")
    (error "line continuations cannot be used at the end of a file")))
