tests/snapshots/corpus__sexpr@error_invalid_escape.kdl.snap
---
source: tests/corpus.rs
expression: "invalid escape=\"\\'\"\n"
---
(document
  (node
    (name invalid)
    (trivia " ")
    (property
      (name escape)
      (trivia "=")
      (error "invalid escape sequence")
      (trivia "\"\\'\"")
      (value "<error>"))
    (trivia "\n")))
