tests/snapshots/corpus__sexpr@error_whitespace_after_type.kdl.snap
---
source: tests/corpus.rs
expression: "(interesting) node\nnode (interesting) \"value\"\n"
---
(document
  (node
    (trivia "(")
    (type interesting)
    (trivia ")")
    (error "type annotations must not be followed by whitespace")
    (trivia " ")
    (name node)
    (trivia "\n"))
  (node
    (name node)
    (trivia " ")
    (argument
      (trivia "(")
      (type interesting)
      (trivia ")")
      (error "type annotations must not be followed by whitespace")
      (trivia " ")
      (value "value"))
    (trivia "\n")))
