tests/snapshots/corpus__sexpr@error_whitespace_in_property.kdl.snap
---
source: tests/corpus.rs
expression: "node property = \"value\"\n"
---
(document
  (node
    (name node)
    (trivia " ")
    (property
      (name property)
      (trivia " " "=" " ")
      (error "node properties must not contain whitespace")
      (value "value"))
    (trivia "\n")))
