tests/snapshots/corpus__sexpr@error_whitespace_in_type.kdl.snap
---
source: tests/corpus.rs
expression: "( interesting )node with=( interesting )\"value\"\n"
---
(document
  (node
    (trivia "(" " ")
    (type interesting)
    (trivia " ")
    (error "type annotations must not contain whitespace")
    (trivia ")")
    (name node)
    (trivia " ")
    (property
      (name with)
      (trivia "=" "(" " ")
      (type interesting)
      (trivia " ")
      (error "type annotations must not contain whitespace")
      (trivia ")")
      (value "value"))
    (trivia "\n")))
